# alloy

./: .bochsrc  .envrc  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  boot.asm  bootloader.asm  grub.cfg  idt.c  kernel-boot.asm  kernel.asm  kernel.c  kernel32.asm  linker.ld  multiboot-hh.ld  multiboot.ld  ok  ok.ld  stdio.c  term.c  user  x86-alloy.json
alloy_std/: Cargo.toml
alloy_std/src/: lib.rs
asm/: bootloader.asm  kernel32.asm  loader.asm  multiboot.asm  utils.asm
boot/: Cargo.toml  boot.ld  bootloader.asm  multiboot.asm
boot/.cargo/: config.toml
boot/src/: main.rs
hello_rs/: Cargo.toml
hello_rs/src/: main.rs
include/kernel/: all.h  cpu.h  fs.h  inet.h  interrupts.h  log.h  math.h  multiboot.h  proc.h  stdio.h  string.h  term.h  test.h  util.h
include/kernel/arch/: x86.h
include/kernel/drivers/: ata.h  pci.h  pic8259.h  uart16550.h
include/kernel/drivers/net/: e1000.h  ne2k.h  rtl8139.h
include/kernel/fs/: fat.h  volume.h
include/kernel/mem/: heap.h  physical.h  virtual.h
include/kernel/net/: arp.h  dhcp.h  ip.h  link.h  tcp.h  udp.h
include/kernel/proc/: elf.h  exec.h
include/std/: stdio.h
kernel/: Cargo.toml  fs.c  inet.c  interrupts.c  kernel.c  link.c  multiboot.ld  stdio.c  string.c  util.c  x86-alloy.json
kernel-rust/: .gitignore  Cargo.toml
kernel-rust/.cargo/: config.toml
kernel-rust/src/: lib.rs  print.rs
kernel/.cargo/: config.toml
kernel/arch/x86/: gdt.c  idt.c  idt_asm.asm
kernel/asm/: loader.asm  multiboot.asm  utils.asm
kernel/drivers/: pci.c  pic8259.c
kernel/drivers/net/: e1000.c  ne2k.c  rtl8139.c
kernel/fs/: fat.c
kernel/mem/: heap.c  physical.c  virtual.c
kernel/net/: arp.c  dhcp.c  ip.c  link.c  tcp.c  udp.c
kernel/proc/: elf.c  proc.c
kernel/resources/: hello.asm
kernel/src/: boot.rs  cpu.rs  exec.rs  fs.rs  int.rs  lib.rs  logging.rs  main.rs  multiboot.rs  serial.rs  string.rs  term.rs  test.rs
kernel/src/cpu/: gdt.rs  idt.rs  interrupts.rs  mod.rs
kernel/src/drivers/: ata.rs  mod.rs  pic_8259.rs  ps2.rs  uart_16550.rs
kernel/src/drivers/storage/: ata.rs  mod.rs
kernel/src/externs/: loader.rs  mod.rs  utils_asm.rs
kernel/src/fs/: block.rs  mod.rs  ustar.rs
kernel/src/io/: logging.rs  mod.rs  serial.rs  term.rs
kernel/src/mem/: heap.rs  mod.rs  physical.rs  virt.rs
kernel/src/proc/: elf.rs  exec.rs  mod.rs
kernel_bin/: Cargo.toml
kernel_bin/asm/: loader.asm
kernel_bin/resources/: hello.tar  hello_rust.tar
kernel_bin/resources/test/: test.tar
kernel_bin/src/: lib.rs
link/: linker.ld  multiboot.ld
resources/: hello.asm  hello.c
scripts/: build-elf-toolchain.sh  build-hosted-toolchain.sh  build-newlib.sh  debug.sh  fs-linux.sh  fs.sh  iso.sh  run.sh  test.sh  update-hdd.sh
src/: interrupts.c  kernel.c  multiboot.asm  stdio.c  term.c  test.c
src/fs/: volume.c
src/kernel/: fs.c  interrupts.c  kernel.c  term.c
src/kernel/arch/x86/: gdt.c  idt_asm.asm
src/kernel/drivers/: ata.c  uart16550.c
src/kernel/fs/: fat.c
src/kernel/mem/: heap.c  physical.c  virtual.c
src/kernel/proc/: exec.c
src/mem/: physical.c  virtual.c
stage2/: Cargo.toml  config.toml  stage2.ld
stage2/.cargo/: config.toml
stage2/asm/: loader_stage2.asm
stage2/src/: ata.rs  lib.rs
toolchain/binutils/patches/: config.sub
toolchain/binutils/patches/bfd/: config.bfd
toolchain/binutils/patches/gas/: configure.tgt
toolchain/binutils/patches/ld/: Makefile.am  configure.tgt
toolchain/gcc/files/gcc/config/: alloy.h
toolchain/gcc/patches/: config.sub
toolchain/gcc/patches/gcc/: config.gcc
toolchain/gcc/patches/libgcc/: config.host
toolchain/gcc/patches/libstdc++-v3/: crossconfig.m4
toolchain/newlib/files/newlib/libc/sys/alloy/: Makefile.am  Makefile.in  configure  crt0.S  crt0.c  syscalls.c  syscalls_asm.S
toolchain/newlib/patches/: config.sub
toolchain/newlib/patches/newlib/: configure.host
toolchain/newlib/patches/newlib/libc/sys/: configure.in
userspace/: Makefile  crt0.S  main.c  write.c
