# [lib]
# crate-type = ["staticlib"]

[package]
name = "kernel"
version = "0.0.1"
edition = "2018"

[dependencies]
spin = "0.7.1"
volatile = "0.2.6"
bitflags = "1.2.1"
pc-keyboard = "0.5.0"
seq-macro = "0.2.1"
log = "0.4.14"
linked_list_allocator = "0.8.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
verbose = []
test = []
higher_half = []
